# orca-external-tools

mace/: goat.out  mace.sh  maceclient.sh  maceserver.sh  pyproject.toml  slurm-37055974.out  ssubo_mace
mace/src/maceexttool/: calculator.py  client.py  common.py  server.py  standalone.py
notebooks/: uma_workflow_example.ipynb
src/oet/calculator/: gxtb.py
src/oet/core/: base_calc.py
uma/: README.md
